fix: Prevent grid blowout on Firefox with table in wizard (#559)

--- a/src/wizard/styles.scss
+++ b/src/wizard/styles.scss
@@ -20,6 +20,7 @@
   row-gap: awsui.$space-scaled-xl;
 
   &.small-container {
+    grid-template-columns: minmax(0, 1fr) 0;
     row-gap: awsui.$space-scaled-l;
   }
 }
